[gd_scene load_steps=4 format=3 uid="uid://c41r5w353wr24"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_yp2fg"]
[ext_resource type="SpriteFrames" uid="uid://mcg6xvqia34f" path="res://Player/playerGreenSkin.tres" id="2_ylx23"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8epyx"]
size = Vector2(12, 17)

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource("1_yp2fg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = ExtResource("2_ylx23")
animation = &"Run"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_8epyx")

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2(0, -12)
target_position = Vector2(0, 15)
collide_with_areas = true
collide_with_bodies = false

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(0, -12)

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="CoyoteJumpTimer" to="." method="_on_coyote_jump_timer_timeout"]
